Fixed layout on tablet

--- a/SmsFeedback_Take4/Content/messages.css
+++ b/SmsFeedback_Take4/Content/messages.css
@@ -304,7 +304,7 @@ input[name="countdown"] {
 }
 
 #textareaContainer {
-   margin-top: 4px;
+
    padding-left: 20px;
    padding-right: 108px;
    position:relative;
